// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox allows numbers as value 1`] = `
.c2 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c2 > i {
  display: none;
}

.c0 {
  position: fixed;
  opacity: 0;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

input:focus ~ .c1 > div > span {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

input:checked ~ .c1 > div > span {
  background-color: #248700;
  border-color: #248700;
}

input:checked ~ .c1 > div > span > i {
  display: block;
}

input:disabled ~ .c1 > div > span {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

input:disabled ~ .c1 > div > div {
  color: #d8d8d8;
}

<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <input
    aria-invalid="false"
    class="c0"
    data-testid="hidden-input"
    id="the-group-name_1"
    name="the-group-name"
    type="checkbox"
    value="1"
  />
  <label
    class="c1"
    data-testid="checkbox-label"
    for="the-group-name_1"
  >
    <div
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
    >
      <span
        class="c2"
        data-testid="fake-input"
      >
        <i
          aria-hidden="true"
          class="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </span>
      <div
        class=""
      >
        <span
          class="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
        >
          A label
        </span>
      </div>
    </div>
  </label>
</div>
`;

exports[`Checkbox disabled can be disabled 1`] = `
<ColoredTextProvider
  className=""
  isError={false}
  tag="div"
>
  <div
    className=""
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        A label
      </span>
    </Text>
  </div>
</ColoredTextProvider>
`;

exports[`Checkbox disabled can be disabled 2`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Checkbox__FakeCheckbox-jt362p-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Checkbox__FakeCheckbox-jt362p-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<span
    className="c0"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox disabled can be disabled and checked 1`] = `
<ColoredTextProvider
  className=""
  isError={false}
  tag="div"
>
  <div
    className=""
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        A label
      </span>
    </Text>
  </div>
</ColoredTextProvider>
`;

exports[`Checkbox disabled can be disabled and checked 2`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Checkbox__FakeCheckbox-jt362p-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Checkbox__FakeCheckbox-jt362p-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<span
    className="c0"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox error can have an error feedback state 1`] = `
.c0 {
  color: #c12335;
}

<ColoredTextProvider
  className="c0"
  isError={true}
  tag="div"
>
  <div
    className="c0"
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        Some error
      </span>
    </Text>
  </div>
</ColoredTextProvider>
`;

exports[`Checkbox error can have an error feedback state 2`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Checkbox__FakeCheckbox-jt362p-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Checkbox__FakeCheckbox-jt362p-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<span
    className="c0"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox error can have an error message 1`] = `
.c0 {
  color: #c12335;
}

<ColoredTextProvider
  className="c0"
  isError={true}
  tag="div"
>
  <div
    className="c0"
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        Some error
      </span>
    </Text>
  </div>
</ColoredTextProvider>
`;

exports[`Checkbox error can have an error message 2`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Checkbox__FakeCheckbox-jt362p-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Checkbox__FakeCheckbox-jt362p-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<span
    className="c0"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox error can have an error message 3`] = `
<InputFeedback
  feedback="error"
  id="the-group-namethe-value_error-message"
>
  <Box
    className="TDS_InputFeedback-modules__error___MtS9E TDS_InputFeedback-modules__base___1O6Oo TDS_Borders-modules__rounded___3df1Q TDS_Messaging-modules__error___3NArF"
    id="the-group-namethe-value_error-message"
    inline={false}
    inset={3}
    role="alert"
    tag="div"
  >
    <div
      className="TDS_Box-modules__horizontalPadding-3___2uoUp TDS_Box-modules__verticalPadding-3___Fsv37 TDS_InputFeedback-modules__error___MtS9E TDS_InputFeedback-modules__base___1O6Oo TDS_Borders-modules__rounded___3df1Q TDS_Messaging-modules__error___3NArF"
      id="the-group-namethe-value_error-message"
      role="alert"
    >
      <Paragraph
        align="left"
        bold={false}
        invert={false}
        size="small"
      >
        <p
          className="TDS_Typography-modules__wordBreak___3OZx_ TDS_Spacing-modules__noSpacing___XPYDG TDS_Typography-modules__color___2CNH8 TDS_Typography-modules__small___mt5lS TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__smallFont___3S6nz TDS_Paragraph-modules__leftAlign___KgwhE"
        >
          Error message
        </p>
      </Paragraph>
    </div>
  </Box>
</InputFeedback>
`;

exports[`Checkbox error does not appear as an error when it is checked 1`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Checkbox__FakeCheckbox-jt362p-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Checkbox__FakeCheckbox-jt362p-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<span
    className="c0"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox focusing can be focused and unfocused 1`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Checkbox__FakeCheckbox-jt362p-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Checkbox__FakeCheckbox-jt362p-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<span
    className="c0"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox focusing can be focused and unfocused 2`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Checkbox__FakeCheckbox-jt362p-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Checkbox__FakeCheckbox-jt362p-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<span
    className="c0"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox has a fake checkbox 1`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<Checkbox__FakeCheckbox
    data-testid="fake-input"
  >
    <StyledComponent
      data-testid="fake-input"
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "Checkbox__FakeCheckbox-jt362p-0",
            "isStatic": true,
            "lastClassName": "c0",
            "rules": Array [
              "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
            ],
          },
          "displayName": "Checkbox__FakeCheckbox",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
          "target": "span",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
    >
      <span
        className="c0"
        data-testid="fake-input"
      >
        <DecorativeIcon
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <Icon
            aria-hidden="true"
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <i
              aria-hidden="true"
              className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
            />
          </Icon>
        </DecorativeIcon>
      </span>
    </StyledComponent>
  </Checkbox__FakeCheckbox>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<StyledComponent
    data-testid="fake-input"
    forwardedComponent={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": ComponentStyle {
          "componentId": "Checkbox__FakeCheckbox-jt362p-0",
          "isStatic": true,
          "lastClassName": "c0",
          "rules": Array [
            "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
          ],
        },
        "displayName": "Checkbox__FakeCheckbox",
        "foldedComponentIds": Array [],
        "render": [Function],
        "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    forwardedRef={null}
  >
    <span
      className="c0"
      data-testid="fake-input"
    >
      <DecorativeIcon
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <Icon
          aria-hidden="true"
          size={16}
          symbol="checkmark"
          variant="inverted"
        >
          <i
            aria-hidden="true"
            className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
          />
        </Icon>
      </DecorativeIcon>
    </span>
  </StyledComponent>,
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<span
    className="c0"
    data-testid="fake-input"
  >
    <DecorativeIcon
      size={16}
      symbol="checkmark"
      variant="inverted"
    >
      <Icon
        aria-hidden="true"
        size={16}
        symbol="checkmark"
        variant="inverted"
      >
        <i
          aria-hidden="true"
          className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </Icon>
    </DecorativeIcon>
  </span>,
]
`;

exports[`Checkbox must have a label 1`] = `
Array [
  .c0 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c0 > i {
  display: none;
}

<div
    className="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
  >
    <Checkbox__FakeCheckbox
      data-testid="fake-input"
    >
      <StyledComponent
        data-testid="fake-input"
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "Checkbox__FakeCheckbox-jt362p-0",
              "isStatic": true,
              "lastClassName": "c0",
              "rules": Array [
                "height: 20px; width: 20px; min-height: 20px; min-width: 20px; outline: 0; line-height: 0; display: flex; align-items: center; justify-content: center; cursor: pointer; margin-top: 0.125rem; transition: border-color 0.1s linear, background-color 0.1s linear; border-width: 1px; border-style: solid; border-radius: 4px; border-color: #54595f; background-color: #fff; & > i {
  display: none;
}",
              ],
            },
            "displayName": "Checkbox__FakeCheckbox",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "Checkbox__FakeCheckbox-jt362p-0",
            "target": "span",
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
      >
        <span
          className="c0"
          data-testid="fake-input"
        >
          <DecorativeIcon
            size={16}
            symbol="checkmark"
            variant="inverted"
          >
            <Icon
              aria-hidden="true"
              size={16}
              symbol="checkmark"
              variant="inverted"
            >
              <i
                aria-hidden="true"
                className="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
              />
            </Icon>
          </DecorativeIcon>
        </span>
      </StyledComponent>
    </Checkbox__FakeCheckbox>
    <Styled(ColoredTextProvider)
      isError={false}
    >
      <StyledComponent
        forwardedComponent={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "attrs": Array [],
            "componentStyle": ComponentStyle {
              "componentId": "sc-bdVaJa",
              "isStatic": false,
              "lastClassName": "bDWFJH",
              "rules": Array [
                [Function],
              ],
            },
            "displayName": "Styled(ColoredTextProvider)",
            "foldedComponentIds": Array [],
            "render": [Function],
            "styledComponentId": "sc-bdVaJa",
            "target": [Function],
            "toString": [Function],
            "warnTooManyClasses": [Function],
            "withComponent": [Function],
          }
        }
        forwardedRef={null}
        isError={false}
      >
        <ColoredTextProvider
          className=""
          isError={false}
          tag="div"
        >
          <div
            className=""
          >
            <Text
              block={false}
              bold={false}
              invert={false}
              size="base"
            >
              <span
                className="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
              >
                Some label
              </span>
            </Text>
          </div>
        </ColoredTextProvider>
      </StyledComponent>
    </Styled(ColoredTextProvider)>
  </div>,
  <div
    className=""
  >
    <Text
      block={false}
      bold={false}
      invert={false}
      size="base"
    >
      <span
        className="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
      >
        Some label
      </span>
    </Text>
  </div>,
]
`;

exports[`Checkbox renders 1`] = `
.c2 {
  height: 20px;
  width: 20px;
  min-height: 20px;
  min-width: 20px;
  outline: 0;
  line-height: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  margin-top: 0.125rem;
  -webkit-transition: border-color 0.1s linear,background-color 0.1s linear;
  transition: border-color 0.1s linear,background-color 0.1s linear;
  border-width: 1px;
  border-style: solid;
  border-radius: 4px;
  border-color: #54595f;
  background-color: #fff;
}

.c2 > i {
  display: none;
}

.c0 {
  position: fixed;
  opacity: 0;
  pointer-events: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

input:focus ~ .c1 > div > span {
  box-shadow: 0 0 4px 1px #54595f;
  border-color: #fff;
}

input:checked ~ .c1 > div > span {
  background-color: #248700;
  border-color: #248700;
}

input:checked ~ .c1 > div > span > i {
  display: block;
}

input:disabled ~ .c1 > div > span {
  background-color: #d8d8d8;
  border-color: #d8d8d8;
}

input:disabled ~ .c1 > div > div {
  color: #d8d8d8;
}

<div
  class="TDS_Box-modules__betweenBottomMargin-2___31zX_ TDS_Box-modules__stack___33m4D"
>
  <input
    aria-invalid="false"
    class="c0"
    data-testid="hidden-input"
    id="the-group-name_the-value"
    name="the-group-name"
    type="checkbox"
    value="the-value"
  />
  <label
    class="c1"
    data-testid="checkbox-label"
    for="the-group-name_the-value"
  >
    <div
      class="TDS_Box-modules__betweenRightMargin-3___1dOvx TDS_Box-modules__inline___jTHcz"
    >
      <span
        class="c2"
        data-testid="fake-input"
      >
        <i
          aria-hidden="true"
          class="TDS_Icon-modules__iconCheckmark___3cAol TDS_Icon-modules__icon___13xYd TDS_Icon-modules__inverted___2mdlT TDS_Icon-modules__size16___1pm12"
        />
      </span>
      <div
        class=""
      >
        <span
          class="TDS_Typography-modules__base___2nkPE TDS_Typography-modules__wordBreak___3OZx_ TDS_Typography-modules__baseFont___2Cfk4 TDS_Typography-modules__inheritColor___SREX0"
        >
          A label
        </span>
      </div>
    </div>
  </label>
</div>
`;
